--- a/config.json
+++ b/config.json
@@ -1,22 +1,20 @@
 {
-  "activation": "gelu",
   "architectures": [
-    "DistilBertForQuestionAnswering"
+    "BertForQuestionAnswering"
   ],
-  "attention_dropout": 0.1,
-  "dim": 768,
-  "dropout": 0.1,
-  "hidden_dim": 3072,
+  "attention_probs_dropout_prob": 0.1,
+  "hidden_act": "gelu",
+  "hidden_dropout_prob": 0.1,
+  "hidden_size": 256,
   "initializer_range": 0.02,
+  "intermediate_size": 1024,
+  "layer_norm_eps": 1e-12,
   "max_position_embeddings": 512,
-  "model_type": "distilbert",
-  "n_heads": 12,
-  "n_layers": 6,
+  "model_type": "bert",
+  "num_attention_heads": 4,
+  "num_hidden_layers": 4,
   "output_past": true,
   "pad_token_id": 0,
-  "qa_dropout": 0.1,
-  "seq_classif_dropout": 0.2,
-  "sinusoidal_pos_embds": true,
-  "tie_weights_": true,
-  "vocab_size": 28996
+  "type_vocab_size": 2,
+  "vocab_size": 30522
 }
